styles/index.css
/* ... */
body[role=application] {}
body > main   { -webkit-overflow-scrolling: touch }
body > aside  { -webkit-transform: translatez(0) }
body > footer { -webkit-transform: translatez(0) }
/* https://ferdychristant.com/the-world-s-most-overlooked-web-optimization-for-ios-d88c7517d520 */
body > footer { -webkit-transform: translatez(0) }

a { -webkit-touch-callout: default }

iframe, pre, table, select[multiple] {
  /*
    - https://css-tricks.com/almanac/properties/s/scrollbar-gutter
    - https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
    - https://bram.us/2021/07/23/prevent-unwanted-layout-shifts-caused-by-scrollbars-with-the-scrollbar-gutter-css-property
  */
  scrollbar-gutter: stable both-edges;
 }


pre code, var, p, cite, blockquote, address
/* and all id-entifiable headers */
, header[id], h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: text; /* Webkit (Chrome all / Safari all) */
          user-select: text; /* https://caniuse.com/mdn-css_properties_user-select_text */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}

code, data, kbd, mark, pre, q, samp, var {
  -webkit-user-drag: auto; /* https://stackoverflow.com/q/15034842 */
  -webkit-user-select: all; /* Webkit (Chrome all / Safari all) */
          user-select: all; /* https://caniuse.com/mdn-css_properties_user-select_all */
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
}

pre::selection, code::selection {
  -webkit-tap-highlight-color: Mark; /* https://davidwalsh.name/mobile-highlight-color */
}

header, h1, h2, h3, h4, h5, h6 {
  padding: var(--margin-collapse-bugfix) var(--font-size);
}
body > header {}
nav > header {
}
nav > header::before,
nav > header::after {
  padding: 0.2ch;
  margin: 0 0.1ch;
}
nav > header::before {
  content: '🧭';
}
nav > header::after {
  content: '⬊';
}

iframe {
  width: 100%;
  border: none;
  background: canvas;
}
hr { /* https://lifewire.com/styling-horizontal-rule-tag-3466399 */
  border: 0;
  height: .15em;
  opacity: 0.25;
  max-width: 80vw;
  overflow: visible;
  box-sizing: content-box
}

mark {
  padding: 0.1618em;
  border-radius: 0.318em;
  box-shadow: var(--box-shadow);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/box-decoration-break */
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}

/* https://stackoverflow.com/q/5437674/what-unicode-characters-represent-time */
time, time::before, time::after { border-radius: inherit }
time {
  cursor: wait;
  padding: 1ch;
  font-size: small;
  border-radius: 1ch;
  text-align: center;
  white-space: nowrap;
  display: inline-block;
  line-height: 1.6182em;
  text-overflow: ellipsis;
}
time[title] {
  background: lime;
}
time[datetime] {
  background: rgba(255,255,255,0.5);
}
time::before, time::after {}
time::before {
  content: '⌚';
  padding: 0.1682ch;
  margin-inline-end: 1ch;
}
time::after{
  content: attr(datetime);
  margin-inline-start: 0.1682ch;
}
time[datetime]::before { content: '🗓' }
time::after {
  opacity: 0.5;
  display: block;
  font-size: smaller;
  padding-inline: .5em;
  background: inherit;
}
time[datetime]:hover::after {
  opacity: 1.0;
}
time:empty {
  background: yellow;
}
time:empty::before {}

p > time { vertical-align: middle }
p > time::after {
  opacity: 0;
  position: absolute;
}

var, data {
  color: CanvasText;
  padding: 0.1618em;
  font-weight: bold;
  background: ButtonFace;
  margin-inline: 0.1618em;
}
var{}
data {}

pre, code, kbd, samp {
  border-radius: 1ch;
  background-color: ButtonFace;
}
kbd {
  border-radius: 0.5ch;
  background-color: Canvas;
  text-transform: uppercase;
  border: 0.1ch solid currentColor;
  box-shadow: 0.1ch 0.2ch 0 currentColor;
}
pre code {
  display: inherit;
  white-space: break-spaces;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}


/* http://html5doctor.com/the-details-and-summary-elements */
details {}
summary {
  cursor: s-resize;
  list-style: none;
}
summary::before,
summary::after {
  content: 'foo';
  background: orange;
}
summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before
  { content: '>' }
main details[open] > summary::before
  { content: 'v' }

/* NAV */
nav {
  margin: 0;
}
nav > details > ul {
  margin: unset;
  width: inherit;
  display: list-item;
  position: relative;
}
nav > details > ul li li {
  list-style: '➱' inside;
}
nav > details > ul li li:hover {
  list-style-type: '➯';
}
nav details > summary {
  cursor: s-resize;
  list-style: '📁' inside;
}
nav > details > summary {
  display: list-item;
  background: darkgreen;
  /* clip-path: inset(0px 244px 1px 170px); */
   /* https://htmlsymbols.xyz/unicode/U+2630 */
}
nav > details > summary::before,
nav > details > summary::after {
  content: '☰';
  width: 2em;
  min-width: 2em;
  margin-inline: 1ch;
  padding-block: 1ch;
  text-align: center;
  z-index: 0;
  font-size: 2em;
  border: 0.2ch solid;
}
nav > details > summary::before
  {
  display: list-item;
  content: 'menu';
  list-style: '👇';
  list-style-position: inside;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0ch;
  width: 3em;
  font-size: 1em;
}
nav > details > summary::after {
  /* list-style-type: unset; */
  /* position: fixed; */
  /* bottom: 1ch; */
  /* right: 1ch; */
}
nav details[open] > summary {
  cursor: n-resize;
  list-style: '📂';
}
nav > details[open] > summary {
  margin-block-end: 1ch;
  list-style-type: 'ⓧ';
  list-style-position: inside;
}
nav > details[open] > summary::before,
nav > details[open] > summary::after {
  content: 'ⓧ';
}
nav > details[open] > summary:hover::before,
nav > details[open] > summary:hover::after {
  /* https://htmlsymbols.xyz/unicode/U+2716 */
  /* content: '✖'; */
}
/* ... */

